# roosevelt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  config.sample.yaml  notes.txt  role_stats.sql  rust-toolchain.toml
.github/workflows/: ci.yml
database/: Cargo.toml  README.md
database/migrations/: 20240101_initial_schema.sql
database/src/: config.rs  error.rs  lib.rs  models.rs  repository.rs  retry.rs  tests.rs
database/src/collectors/: game_collector.rs  game_metadata.rs  mod.rs
database/src/collectors/tests/: collector_tests.rs
database/src/tests/: unit.rs
database/src/tests/unit/: writer_tests.rs
database/src/writers/: bulk_writer.rs  game_handle.rs  mod.rs  streaming_writer.rs  traits.rs
database/tests/: integration_tests.rs
docs/plans/: 2026-01-29-transactional-database.md
plans/: 0000-2026-01-18-database-integration-spec.md
simulation/: AGENTS.md  Cargo.toml
simulation/src/: card_play.rs  game_state.rs  gameplay.rs  hand.rs  lib.rs  player.rs  types.rs
simulation/tests/: integration_tests.rs
src/: gameplay.rs  lib.rs  types.rs
strategies/: Cargo.toml
strategies/src/: input_strategy.rs  lib.rs
types/: AGENTS.md  Cargo.toml
types/src/: action.rs  card.rs  card_play.rs  game_state.rs  hand.rs  lib.rs  player.rs  player_state.rs
