[package]
name = "roosevelt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
deckofcards = "0.4.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.18"
