[workspace]
resolver = "2"

members = [
    "simulation", "strategies", "types",
]

[workspace.dependencies]
simulation = { path = "./simulation" }
strategies = { path = "./strategies" }
types = { path = "./types" }

clap = "4.3.2"
deckofcards = "0.4.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.18"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = "1.3.3"
