[workspace]
resolver = "2"

members = [
  "database",
  "simulation",
  "strategies",
  "types",
]

[workspace.dependencies]
database = { path = "./database" }
simulation = { path = "./simulation" }
strategies = { path = "./strategies" }
types = { path = "./types" }

clap = "4.3.2"
deckofcards = "0.4.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.18"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.202", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.9.34"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono", "any"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
