[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
