[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
types.workspace = true
strategies.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rand.workspace = true
serde_json.workspace = true
uuid.workspace = true
database.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["full"] }
